--- a/docs/版本说明.md
+++ b/docs/版本说明.md
@@ -19,8 +19,6 @@
 
 stm32起到的作用是作为设备执行用户的命令
 
-![image-20241114195918186](/Users/lijingyang/Library/Application Support/typora-user-images/image-20241114195918186.png)
-
 ## 开发目标
 
 1. 命令行版本实现通讯的需求
@@ -32,33 +30,67 @@ stm32起到的作用是作为设备执行用户的命令
 
 ## 开发过程
 
-1. 首先实现的是简单版的Tcp cs通讯  在命令行下写出来单线程的客户端服务端通讯
-2. 考虑到可扩展性和重复利用的角度 把TCP常用的函数按逻辑分别封装 形成完整对套接字的控制结构 SOCKNODE
-3. 对错误处理的逻辑进行了封装 允许进行错误处理 并且同步到本地
-4. 编写makefile 自动化进行编译
-5. 简化socket的封装
-6. 允许服务端连接多个客户端 并且根据name进行管理
-7. 协议的添加 添加了协议包（新版 但是还没有）
-8. 添加心跳机制 分为两部分 客户端到服务端的心跳
-9. 添加服务端到客户端的心跳
-10. 添加gitingore文件
-11. 大量更新协议 包括协议 - struct - buf的转换函数
-12. 添加QT的客户端
-13. QT添加按钮 封装cmd的方法
-14. 扩充sock包 支持sendMsgTwo 和 recvMsgTwo 即先发大小后发内容
-15. 处理stm32 的接入 写出demo 打包
+首先实现的是简单版的Tcp cs通讯  在命令行下写出来单线程的客户端服务端通讯
+
+考虑到可扩展性和重复利用的角度 把TCP常用的函数按逻辑分别封装 形成完整对套接字的控制结构 SOCKNODE
+
+对错误处理的逻辑进行了封装 允许进行错误处理 并且同步到本地
+
+编写makefile 自动化进行编译
+
+简化socket的封装
+
+* 允许服务端连接多个客户端 并且根据name进 ooj行管理
+
+协议的添加 添加了协议包（新版 但是还没有）
+
+添加心跳机制 分为两部分 客户端到服务端的心跳
+
+添加服务端到客户端的心跳
+
+添加gitingore文件
+
+大量更新协议 包括协议 - struct - buf的转换函数
+
+添加QT的客户端
+
+QT添加按钮 封装cmd的方法
+
+扩充sock包 支持sendMsgTwo 和 recvMsgTwo 即先发大小后发内容
+
+处理stm32 的接入 写出demo 打包
 
 ## 文件结构
-
-![image-20241115184654684](/Users/lijingyang/Library/Application Support/typora-user-images/image-20241115184654684.png)
 
 - bak下面是一些可执行的二进制文件 是历史版本 现在已经不维护了
 - bin目录下是makefile指定的生成位置 存放每一次编译后的生成二进制文件
 - client_qt 是QT版本的客户端
 - client_simple 是不带有protocol的简易版本 也是现在的主要版本
+- client_stm32 是stm32中的客户端包
 - docs中填装的是文档
 - header中填装的是一些标准的头文件 比如标准的头文件以及约定好的 ip port 的配置相关的信息
 - pkg中是一些项目中用到的包 比如net负责网络相关 error负责错误相关 protocol负责自定协议
 - server_simple同上
 - server_withprotocol同上
 - gitignore 是git的忽略文件 用于描述那些文件是不被git跟踪的
+
+## 迭代版本
+
+#### v1. 命令行版本
+
+- 局域网实现简单的客户端服务端 并实现转发
+- 客户端 A B 端分离 A 为嵌入式"家居" B 为 PC 命令窗口
+- 实现多用户多客户端
+
+#### v2. QT版本
+
+- 协议制定
+- 客户端 -> QT
+- 服务端上云
+
+#### v3. 正式版本
+
+- 完整协议支持
+- QT 登录界面
+- 数据库
+- 服务端增加网页
